Added changes in CV Web

--- a/cv.html
+++ b/cv.html
@@ -118,7 +118,7 @@
         <div class="container">
             <br>
             <h3 align="CENTER">Curriculum Vitae of Anirudh Paranjothi</h3>
-            <h5 align="CENTER">Last Update: June 20, 2023</H5>
+            <h5 align="CENTER">Last Update: Sept 09, 2023</H5>
 
             <center><a target="_blank" href="anirudh.vcf">Download in PDF <img border="0" src="images/pdf.gif"></a>
             </center>
@@ -133,7 +133,7 @@
                         <BR></B></FONT>
             <DIV ALIGN="CENTER">
                 <FONT SIZE="+2"><B>
-                        <FONT SIZE="-1">Last Update: June 20, 2023</FONT>
+                        <FONT SIZE="-1">Last Update: Sept 09, 2023</FONT>
                     </B></FONT>
             </DIV>
             <BR>
@@ -155,7 +155,7 @@
                     </TR>
                     <TR>
                         <TD ALIGN="LEFT">&nbsp;</TD>
-                        <TD ALIGN="LEFT">,230 MSCS, Oklahoma State University,</TD>
+                        <TD ALIGN="LEFT">230 MSCS, Oklahoma State University</TD>
                         <TD ALIGN="RIGHT"><TT>anirudh.paranjothi@okstate.edu</TT></TD>
                     </TR>
                     <TR>
@@ -199,12 +199,12 @@
                         <TD ALIGN="LEFT">&nbsp;</TD>
                         <TD ALIGN="LEFT"><B>Ph.D.</B></TD>
                         <TD ALIGN="LEFT">University of Oklahoma</TD>
-                        <TD ALIGN="RIGHT">August 2017 - July 2022</TD>
+                        <TD ALIGN="RIGHT">July 2023</TD>
                     </TR>
                     <TR>
                         <TD ALIGN="LEFT">&nbsp;</TD>
                         <TD ALIGN="LEFT">&nbsp;</TD>
-                        <TD ALIGN="LEFT"><EM>School of Computer ScienceNorman, United States</EM></TD>
+                        <TD ALIGN="LEFT"><EM>School of Computer Science, Norman, United States</EM></TD>
                         <TD ALIGN="RIGHT">&nbsp;</TD>
                     </TR>
                     <TR>
@@ -222,7 +222,7 @@
                             <B>MS</B>
                         </TD>
                         <TD ALIGN="LEFT">Computer Science &amp; University of Oklahoma</TD>
-                        <TD ALIGN="RIGHT">August 2017 - July 2022</TD>
+                        <TD ALIGN="RIGHT">July 2017</TD>
                     </TR>
                     <!-- <TR><TD ALIGN="LEFT">&nbsp;</TD><TD ALIGN="LEFT">&nbsp;</TD>
                 <TD ALIGN="LEFT"><EM>Thesis: Information Retrieval in Peer-to-Peer Networks</EM></TD>
@@ -236,8 +236,8 @@
                         <TD ALIGN="LEFT">
                             <B>Computer Science</B>
                         </TD>
-                        <TD ALIGN="LEFT">Texas A&M University</TD>
-                        <TD ALIGN="RIGHT">June 2015 - May 2017</TD>
+                        <TD ALIGN="LEFT"><EM>Texas A&M University, Kingsville, United States</EM></TD>
+                        <!-- <TD ALIGN="RIGHT">June 2015 - May 2017</TD> -->
                     </TR>
 
 
@@ -256,6 +256,94 @@
             <H1><A NAME="SECTION00030000000000000000">
                     <B>EXPERIENCE</B></A>
             </H1>
+
+            <H1><A NAME="SECTION00020000000000000000">
+                    PROFESSIONAL EXPERIRNCE</A>
+            </H1>
+            <DIV ALIGN="CENTER">
+
+                <TABLE CELLPADDING=3 WIDTH="100%">
+                    <TR>
+                        <TD ALIGN="LEFT">&nbsp;</TD>
+                        <TD ALIGN="LEFT"><B>Assistant Professor</B></TD>
+                        <TD ALIGN="LEFT">&nbsp;</TD>
+                        <TD ALIGN="LEFT">&nbsp;</TD>
+                        <TD ALIGN="RIGHT">August 2022 - Present</TD>
+                    </TR>
+                    <TR>
+                        <TD ALIGN="LEFT">&nbsp;</TD>
+                        <TD ALIGN="LEFT"><EM style="font-size: 16px;">Oklahoma State University, Stillwater, United States</EM></TD>
+                        <TD ALIGN="RIGHT">&nbsp;</TD>
+                    </TR>
+
+                    <TR>
+                        <TD ALIGN="LEFT">&nbsp;</TD>
+                        <TD ALIGN="LEFT"></TD>
+                        <TD ALIGN="LEFT">&nbsp;</TD>
+                        <TD ALIGN="RIGHT">&nbsp;</TD>
+                    </TR>
+
+                    <!-- <TR><TD ALIGN="LEFT">&nbsp;</TD><TD ALIGN="LEFT">&nbsp;</TD>
+            <TD ALIGN="LEFT"><EM>Thesis: Information Retrieval in Peer-to-Peer Networks</EM></TD>
+            <TD ALIGN="RIGHT">&nbsp;</TD>
+        </TR> -->
+
+                    <TR>
+                        <TD ALIGN="LEFT">&nbsp;</TD>
+                        <TD ALIGN="LEFT"><B>Graduate Research Assistant</B></TD>
+                        <TD ALIGN="LEFT">&nbsp;</TD>
+                        <TD ALIGN="LEFT">&nbsp;</TD>
+                        <TD ALIGN="RIGHT" >June 2019 - July 2022</TD>
+                    </TR>
+
+                    <TR>
+                        <TD ALIGN="LEFT">&nbsp;</TD>
+                        <TD ALIGN="LEFT"><EM style="font-size: 16px;">University of Oklahoma, Norman, United States</EM></TD>
+                        <TD ALIGN="RIGHT">&nbsp;</TD>
+                    </TR>
+
+                    <TR>
+                        <TD ALIGN="LEFT">&nbsp;</TD>
+                        <TD ALIGN="LEFT"></TD>
+                        <TD ALIGN="LEFT">&nbsp;</TD>
+                        <TD ALIGN="RIGHT">&nbsp;</TD>
+                    </TR>
+
+                    <TR>
+                        <TD ALIGN="LEFT">&nbsp;</TD>
+                        <TD ALIGN="LEFT"><B>Graduate Teaching Assistant</B></TD>
+                        <TD ALIGN="LEFT">&nbsp;</TD>
+                        <TD ALIGN="LEFT">&nbsp;</TD>
+                        <TD ALIGN="RIGHT" >August 2017 – May 2019, August 2020 – May 2022</TD>
+                    </TR>
+                    <TR>
+                        <TD ALIGN="LEFT">&nbsp;</TD>
+                        <TD ALIGN="LEFT"><EM style="font-size: 16px;">University of Oklahoma, Norman, United States</EM></TD>
+                        <TD ALIGN="RIGHT">&nbsp;</TD>
+                    </TR>
+
+                    <TR>
+                        <TD ALIGN="LEFT">&nbsp;</TD>
+                        <TD ALIGN="LEFT"></TD>
+                        <TD ALIGN="LEFT">&nbsp;</TD>
+                        <TD ALIGN="RIGHT">&nbsp;</TD>
+                    </TR>
+
+                    <TR>
+                        <TD ALIGN="LEFT">&nbsp;</TD>
+                        <TD ALIGN="LEFT"><B>Graduate Teaching Assistant</B></TD>
+                        <TD ALIGN="LEFT">&nbsp;</TD>
+                        <TD ALIGN="LEFT">&nbsp;</TD>
+                        <TD ALIGN="RIGHT" >August 2015 – May 2017</TD>
+                    </TR>
+                    <TR>
+                        <TD ALIGN="LEFT">&nbsp;</TD>
+                        <TD ALIGN="LEFT"><EM style="font-size: 16px;">Texas A&M University, Kingsville, United States</EM></TD>
+                        <TD ALIGN="RIGHT">&nbsp;</TD>
+                    </TR>
+
+                </TABLE>
+            </DIV>
 
             <P>
                 <!-- <DIV ALIGN="CENTER">
@@ -403,9 +491,9 @@
             <H1><A NAME="SECTION00050000000000000000">
                     PUBLICATIONS</A>
             </H1>
-            <B>Google Scholar Citations: 2,655;
-                h-index<A NAME="tex2html1" HREF="#foot103"><SUP>1</SUP></A>: 24;
-                i10-index<A NAME="tex2html2" HREF="#foot104"><SUP>2</SUP></A>: 52</B>
+            <B>Google Scholar Citations: 328;
+                h-index<A NAME="tex2html1" HREF="#foot103"><SUP>1</SUP></A>: 10;
+                i10-index<A NAME="tex2html2" HREF="#foot104"><SUP>2</SUP></A>: 11</B>
 
             <P>
 
@@ -414,7 +502,94 @@
             </H2>
             <DL COMPACT>
 
+                <DL><span class="label label-success">IEEEE 14th Ubiquitous Computing, Electronics, and Mobile
+                        Communication Conference (UEMCON), 2023</span> <a target="_blank"
+                        href="https://www.researchgate.net/pubDLcation/374024616_Sybil_Attack_Detection_in_VANETs_Using_Fog_Computing_and_Beamforming">“Sybil
+                        Attach Detection in VANETs using Fog Computing and Beamforming”</a>,
+                    Anirudh Paranjothi and Abinash Borah
+                </DL>
+
+                <DL><span class="label label-success">IEEE 42nd International Performance, Computing, and
+                        Communications Conference (IPCCC) '2023</span> <a target="_blank"
+                        href="https://www.researchgate.net/pubDLcation/374024521_GPU-based_Parallel_Computing_for_VANETs_Current_State_and_Future_Prospects">“GPU-based
+                        Parallel Computing for VANETs: Current State and Future Prospects”</a>,
+                    Anirudh Paranjothi and Abinash Borah
+                </DL>
+
+                <DL><span class="label label-success"> IEEE 98th Vehicular Technology Conference: VTC2023-Fall,
+                        2023</span> <a target="_blank" href="https://arxiv.org/abs/2108.10319">“Enhancing
+                        Security in VANETs through Efficient Sybil Attack Detection using Fog Computing”</a>,
+                    Anirudh Paranjothi and Mohammad S. Khan
+                </DL>
+
                 <DL><span class="label label-success">shareok'2023</span> <a target="_blank"
+                        href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WJIzZPEAAAAJ&sortby=pubdate&citation_for_view=WJIzZPEAAAAJ:5nxA0vEk-isC">"Misbehavior
+                        Aware on-demand Intrusion Detection System To Enhance Security in VANETs with Efficient
+                        Rogue Nodes Detection and Prevention Techniques
+                        "</a>, Anirudh Paranjothi
+                </DL>
+
+                <DL><span class="label label-success">arXiv '2021</span> <a target="_blank"
+                        href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WJIzZPEAAAAJ&sortby=pubdate&citation_for_view=WJIzZPEAAAAJ:hqOjcs7Dif8C">"Enhancing
+                        security in vanets with efficient sybil attack detection using fog computing
+                        "</a>, Anirudh Paranjothi
+                </DL>
+
+
+                <DL><span class="label label-success">Digital Communications and Networks '2021</span> <a
+                        target="_blank"
+                        href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WJIzZPEAAAAJ&sortby=pubdate&citation_for_view=WJIzZPEAAAAJ:UebtZRa9Y70C">"A
+                        statistical approach for enhancing security in VANETs with efficient rogue node
+                        detection using fog computing"</a>, Anirudh Paranjothi
+                </DL>
+
+                <DL><span class="label label-success">CRC Press '2020</span> <a target="_blank"
+                        href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WJIzZPEAAAAJ&sortby=pubdate&citation_for_view=WJIzZPEAAAAJ:hqOjcs7Dif8C">"Connected
+                        and Autonomous Vehicles in Smart Cities"</a>, Anirudh Paranjothi
+                </DL>
+
+                <DL><span class="label label-success">GLOBECOM 2020-2020 IEEE Global Communications Conference,
+                        1-6 '2020</span> <a target="_blank"
+                        href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WJIzZPEAAAAJ&sortby=pubdate&citation_for_view=WJIzZPEAAAAJ:WF5omc3nYNoC">"F-RouND:
+                        fog-based rogue nodes detection in vehicular ad hoc networks"</a>, Anirudh Paranjothi
+                </DL>
+
+
+                <DL><span class="label label-success">Ad Hoc Networks '2020</span> <a target="_blank"
+                        href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WJIzZPEAAAAJ&sortby=pubdate&citation_for_view=WJIzZPEAAAAJ:YsMSGLbcyi4C">"A
+                        survey on congestion detection and control in connected vehicles"</a>, Anirudh
+                    Paranjothi
+                </DL>
+
+
+                <DL><span class="label label-success">arXiv '2020</span> <a target="_blank"
+                        href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WJIzZPEAAAAJ&sortby=pubdate&citation_for_view=WJIzZPEAAAAJ:YsMSGLbcyi4C">"Message
+                        dissemination in connected vehicles "</a>, Anirudh Paranjothi
+                </DL>
+
+
+
+                <DL><span class="label label-success">arXiv '2020</span> <a target="_blank"
+                        href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WJIzZPEAAAAJ&sortby=pubdate&citation_for_view=WJIzZPEAAAAJ:YsMSGLbcyi4C">"Performance
+                        Analysis of Message Dissemination Techniques in VANET using Fog Computing "</a>, Anirudh
+                    Paranjothi
+                </DL>
+
+
+
+                <DL><span class="label label-success">Computer Communications '2020</span> <a target="_blank"
+                        href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WJIzZPEAAAAJ&sortby=pubdate&citation_for_view=WJIzZPEAAAAJ:Tyk-4Ss8FVUC">"VANETomo:
+                        A congestion identification and control scheme in connected vehicles using network
+                        tomography"</a>, Anirudh Paranjothi
+                </DL>
+
+
+                <DL><span class="label label-success">Internet Technology Letter '2020</span> <a target="_blank"
+                        href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WJIzZPEAAAAJ&sortby=pubdate&citation_for_view=WJIzZPEAAAAJ:zYLM7Y9cAGgC">"PMCD:
+                        Platoon‐Merging approach for cooperative driving"</a>, Anirudh Paranjothi
+                </DL>
+
+                <!-- <DL><span class="label label-success">shareok'2023</span> <a target="_blank"
                         href="https://shareok.org/handle/11244/337169">"Misbehavior Aware on-demand Intrusion Detection
                         System To Enhance Security in VANETs with Efficient Rogue Nodes Detection and Prevention
                         Techniques"</a>,Anirudh Paranjothi, University of Oklahoma -
@@ -456,57 +631,49 @@
                                 congestion identification and control scheme in connected vehicles using network
                                 tomography"</a>, Anirudh Paranjothi, Mohammad S Khan, Rizwan Patan, Reza M Parizi,
                             Mohammed Atiquzzaman</b>,Computer Communications - Elsevier</DL>
+ -->
 
+            </DL>
 
-                    </DL>
+            <P>
 
+            <H1><A NAME="SECTION00070000000000000000">
+                    <B>RESEARCH GRANTS AND FUNDING</B></A>
+            </H1>
 
-
-
-
-
-
-
-
-                    <P>
-
-                    <H1><A NAME="SECTION00070000000000000000">
-                            <B>RESEARCH GRANTS AND FUNDING</B></A>
-                    </H1>
-
-                    <UL>
-                        <LI><B>09/2017-07/2018 (supervisor):</B> <EM>New Researcher Program</EM>, University of Cyprus,
-                            Ph.D. Fellowship for C. Costa, Advisor: Demetrios Zeinalipour-Yazti.
-
-                            <P>
-                        </LI>
-
-                    </UL>
+            <UL>
+                <LI><B>09/2017-07/2018 (supervisor):</B> <EM>New Researcher Program</EM>, University of Cyprus,
+                    Ph.D. Fellowship for C. Costa, Advisor: Demetrios Zeinalipour-Yazti.
 
                     <P>
+                </LI>
 
-                    <P>
+            </UL>
+
+            <P>
+
+            <P>
 
 
 
-                    <P>
+            <P>
 
-                    <H1><A NAME="SECTION000150000000000000000">
-                            <B>LANGUAGES</B></A>
-                    </H1>
+            <H1><A NAME="SECTION000150000000000000000">
+                    <B>LANGUAGES</B></A>
+            </H1>
 
-                    <UL>
-                        <LI>English (fluent)
-                        </LI>
-                        <LI>Tamil (fluent)
-                        </LI>
-                    </UL>
+            <UL>
+                <LI>English (fluent)
+                </LI>
+                <LI>Tamil (fluent)
+                </LI>
+            </UL>
 
-                    <P>
+            <P>
 
-                    <P>
+            <P>
 
-                    <H1><A NAME="SECTION000160000000000000000">
+                <!-- <H1><A NAME="SECTION000160000000000000000">
                             <B>PERSONAL INFORMATION</B></A>
                     </H1>
 
@@ -561,8 +728,8 @@
                     </DL>
                     <HR>
 
-                    <hr class="star-primary">
-                    <footer>
+                    <hr class="star-primary"> -->
+                <!-- <footer>
                         <small>
                             <center>
                                 © 2023 | Dr. Paranjothi. Credits: AR template
@@ -576,7 +743,7 @@
                                 </div>
                             </center>
                         </small>
-                    </footer>
+                    </footer> -->
 
 </body>
 
@@ -586,5 +753,10 @@
     .navbar-default .navbar-nav>li>a {
         font-size: 15px;
         font-weight: bold;
+    }
+
+    body,
+    dl {
+        font-size: 18px;
     }
 </style>
