--- a/index.html
+++ b/index.html
@@ -887,11 +887,8 @@
                             </a>: 328
                         </span>&nbsp;
                     </h4>
+                    
                     <ul>
-
-
-
-
                         <li><span class="label label-success">IEEEE 14th Ubiquitous Computing, Electronics, and Mobile
                                 Communication Conference (UEMCON), 2023</span> <a target="_blank"
                                 href="https://www.researchgate.net/publication/374024616_Sybil_Attack_Detection_in_VANETs_Using_Fog_Computing_and_Beamforming">“Sybil
@@ -1171,7 +1168,7 @@
                         data-holder-rendered="true">
                     <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/megha-jamloki-a852061ab/" target="_blank"
                             style="color: #dd7564">Megha Jamloki</a></h4>
-                    <p class="text-muted fs-5">MS</p>
+                    <p class="text-muted fs-5">MS (CS)</p>
                 </div>
 
                 <div class="col-lg-3">
@@ -1181,7 +1178,7 @@
                         data-holder-rendered="true">
                     <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/anirudhmahajan05/" target="_blank"
                             style="color: #dd7564">Anirudh Mahajan</a></h4>
-                    <p class="text-muted fs-5">MS</p>
+                    <p class="text-muted fs-5">MS (CS)</p>
                 </div>
                 <div class="col-lg-3">
                     <img class="rounded-circle z-depth-2" alt="100x100" width="120" height="120"
@@ -1190,7 +1187,7 @@
                         data-holder-rendered="true">
                     <h4><a class="text-decoration-none" href="#" target="_blank"
                             style="color: #dd7564">Shashank Pola</a></h4>
-                    <p class="text-muted fs-5">MS</p>
+                    <p class="text-muted fs-5">MS (CS)</p>
                 </div>
 
             </div>
