--- a/pub.html
+++ b/pub.html
@@ -505,7 +505,7 @@
 
                 <table id="gsc_a_t">
                     <thead>
-                        <h2>Selected Publications </h2>
+                        <h2>Publications </h2>
                         <h4>
                             <span class="label label-warning">                             
                                 <a target="_blank" href="https://en.wikipedia.org/wiki/Interstate_Identification_Index">
