Modified cv pages

--- a/cv.html
+++ b/cv.html
@@ -120,7 +120,7 @@
             <h3 align="CENTER">Curriculum Vitae of Anirudh Paranjothi</h3>
             <h5 align="CENTER">Last Update: Sept 09, 2023</H5>
 
-            <center><a target="_blank" href="anirudh.vcf">Download in PDF <img border="0" src="images/pdf.gif"></a>
+            <center><a target="_blank" href="cv.pdf">Download in PDF <img border="0" src="images/pdf.gif"></a>
             </center>
 
             <BR>
@@ -199,18 +199,12 @@
                         <TD ALIGN="LEFT">&nbsp;</TD>
                         <TD ALIGN="LEFT"><B>Ph.D.</B></TD>
                         <TD ALIGN="LEFT">University of Oklahoma</TD>
-                        <TD ALIGN="RIGHT">July 2023</TD>
+                        <TD ALIGN="RIGHT">July 2022</TD>
                     </TR>
                     <TR>
                         <TD ALIGN="LEFT">&nbsp;</TD>
                         <TD ALIGN="LEFT">&nbsp;</TD>
                         <TD ALIGN="LEFT"><EM>School of Computer Science, Norman, United States</EM></TD>
-                        <TD ALIGN="RIGHT">&nbsp;</TD>
-                    </TR>
-                    <TR>
-                        <TD ALIGN="LEFT">&nbsp;</TD>
-                        <TD ALIGN="LEFT">&nbsp;</TD>
-                        <TD ALIGN="LEFT"><EM>Research Assistant</EM></TD>
                         <TD ALIGN="RIGHT">&nbsp;</TD>
                     </TR>
 
@@ -221,7 +215,7 @@
                         <TD ALIGN="LEFT">
                             <B>MS</B>
                         </TD>
-                        <TD ALIGN="LEFT">Computer Science &amp; University of Oklahoma</TD>
+                        <TD ALIGN="LEFT"><EM>Texas A&M University, Kingsville, United States</EM></TD>
                         <TD ALIGN="RIGHT">July 2017</TD>
                     </TR>
                     <!-- <TR><TD ALIGN="LEFT">&nbsp;</TD><TD ALIGN="LEFT">&nbsp;</TD>
@@ -233,10 +227,8 @@
 
                     <TR>
                         <TD ALIGN="LEFT">&nbsp;</TD>
-                        <TD ALIGN="LEFT">
-                            <B>Computer Science</B>
-                        </TD>
-                        <TD ALIGN="LEFT"><EM>Texas A&M University, Kingsville, United States</EM></TD>
+                        <TD ALIGN="LEFT"></TD>
+                        <TD ALIGN="LEFT">Dept of Electrical Engineering  &amp; Computer Science </TD>
                         <!-- <TD ALIGN="RIGHT">June 2015 - May 2017</TD> -->
                     </TR>
 
@@ -641,9 +633,24 @@
                     <B>RESEARCH GRANTS AND FUNDING</B></A>
             </H1>
 
-            <UL>
+            <!-- <UL>
                 <LI><B>09/2017-07/2018 (supervisor):</B> <EM>New Researcher Program</EM>, University of Cyprus,
                     Ph.D. Fellowship for C. Costa, Advisor: Demetrios Zeinalipour-Yazti.
+
+                    <P>
+                </LI>
+
+            </UL> -->
+             <UL>
+                <LI><B>06/2023-06/2024 (PI):</B> <EM>Arts and Science Summer Researcher Award(ASR)</EM>, Oklahoma State University.
+
+                    <P>
+                </LI>
+                <LI><B>08/2023-04/2023 (PI):</B> <EM>Advancing Undergraduate Research and Creative Activity(AURCA)</EM>, Oklahoma State University.
+
+                    <P>
+                </LI>
+                <LI><B>08/2023-07/2024 (CO-PI):</B> <EM>Oklahoma Department of Transportation.</EM>
 
                     <P>
                 </LI>
@@ -656,7 +663,7 @@
 
 
 
-            <P>
+            <!-- <P>
 
             <H1><A NAME="SECTION000150000000000000000">
                     <B>LANGUAGES</B></A>
@@ -669,7 +676,7 @@
                 </LI>
             </UL>
 
-            <P>
+            <P> -->
 
             <P>
 
