--- a/index.html
+++ b/index.html
@@ -1030,9 +1030,7 @@
                 <strong><a href="https://go.okstate.edu/" class="text-decoration-none website_link">Oklahoma State
                         University</a></strong>. I lead <b>ANTS: Advanced Networking and Telecommunication Security Research Lab</b> at OSU
             </p>
-            <p class="lead">My research area in general is applied machine learning for real world complex systems with
-                large scale networks and text data to model prediction and forecasting problems. Applications include
-                computational social science, recommender systems, and computational biology.</p>
+            <p class="lead">My research area in general is Vehicular Networking, Transportation, and Security for next generation wireless networking like 6G and beyond.</p>
             <div class="border-top my-3"></div>
             <hr>
             <h3 style="font-weight: bold;">Research Positions</h3>
@@ -1069,7 +1067,7 @@
                     <img class="rounded-circle z-depth-2" alt="100x100" width="120" height="120"
                         style="border-radius: 60px;" src="https://www.cs.ou.edu/~database/HIGEST-DB/images/Abinash.jpg"
                         data-holder-rendered="true">
-                    <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/sadia-kamal-9ba392171/"
+                    <h4><a class="text-decoration-none" href="https://www.researchgate.net/profile/Abinash-Borah"
                             target="_blank" style="color: #dd7564">Abinash Borah</a></h4>
                     <p class="text-muted fs-5">PhD</p>
                 </div>
